:children_crossing: feature: editor form updated